microservices-materials/white-paper/4-2-1-Case1-ServiceA.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-a-base
spec:
  ports:
  - name: http
    port: 20001
    protocol: TCP
    targetPort: 20001
  selector:
    app: spring-cloud-a

---
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-a-gray
spec:
  ports:
  - name: http
    port: 20001
    protocol: TCP
    targetPort: 20001
  selector:
    app: spring-cloud-a-new
